# PPT-navigation-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ppt_nav/: __init__.py  __main__.py  cli.py  generator.py  outline.py  parser.py  ppt_builder.py
template/: template_16-9.pptx  template_4-3.pptx
